Bug 1570881 - Update remaining BytecodeEmitter constructor to use FunctionBox line/column r=jimb

Differential Revision: https://phabricator.services.mozilla.com/D43390